<resources>
    <string name="app_name" translatable="false">AntiSplit M</string>
    <string name="merge">Select split APK to Merge/AntiSplit</string>
    <string name="success_saved">File saved successfully</string>
    <string name="enable_logs" >Enable logs</string>
    <string name="ask">Ask each time</string>
    <string name="same">Same directory as selected file</string>
    <string name="grant_storage">Storage permission needed to save to the same dir as the selected file</string>
    <string name="no_filepath">"Can\'t write to the filepath "</string>
    <string name="output">"Output directory: "</string>
    <string name="show_dialog">Show dialog allowing selection of which splits to include</string>
    <string name="nothing">Nothing selected</string>
    <string name="change_text_color">Change text color</string>
    <string name="change_background_color">Change background color</string>
    <string name="all">Select All</string>
    <string name="for_device">Select all splits for your device specifications</string>
    <string name="lang_for_device">Select language for your device</string>
    <string name="arch_for_device">Select architecture for your device</string>
    <string name="dpi_for_device">Select screen widths for your device</string>
    <string name="select_splits">Select splits</string>
    <string name="sign_apk">Sign the APK after merging</string>
    <string name="automatically_select">Automatically select splits for your device specifications</string>
    <string name="sign_failed">Failed to sign APK, saving without signing</string>
    <string name="signing">Signing APK…</string>
    <string name="saving">Saving…</string>
    <string name="removed_table_entry">"Removed table-entry : "</string>
    <string name="sanitizing_manifest">Sanitizing manifest…</string>
    <string name="skipping">"Skipping "</string>
    <string name="not_apk">: Not an APK file</string>
    <string name="unselected">: Unselected</string>
    <string name="searching">Searching apk files…</string>
    <string name="cancel">Cancel</string>
    <string name="select">Select</string>
    <string name="label_parent_directory">Parent Directory</string>
    <string name="last_edit">Last edited: </string>
    <string name="error_dir_access">Directory cannot be accessed</string>
    <string name="lang" translatable="false">Language</string>
    <string name="update">Update available</string>
    <string name="new_ver">New version of AntiSplit M is available</string>
    <string name="dl">Download</string>
    <string name="auto_update">Check for updates automatically</string>
    <string name="check_update_now">Check for update now</string>
    <string name="no_update_found">No update found</string>
    <string name="settings">Settings</string>
    <string name="close">Close</string>
    <string name="mismatch">The following splits (%1$s) have mismatched version codes. They are only language codes, so the app can run without them, but these languages will not work in the app. Do you want to continue with merging anyway?</string>
    <string name="warning">Warning</string>
    <string name="mismatch_base">" version code does not match that of base.apk"</string>
    <string-array name="langs_display">
        <item>العربية</item>  <!-- ar -->
        <item>English</item>   <!-- en -->
        <item>Español</item>   <!-- es -->
        <item>Deutsch</item>   <!-- de -->
        <item>Français</item>  <!-- fr -->
        <item>Bahasa Indonesia</item>  <!-- id -->
        <item>Italiano</item>  <!-- it -->
        <item>Polski</item>  <!-- pl -->
        <item>Português</item> <!-- pt -->
        <item>русский язык</item>  <!-- ru -->
        <item>Türkçe</item>    <!-- tr -->
        <item>українська мова</item>  <!-- uk -->
        <item>Tiếng Việt</item>  <!-- vi -->
        <item>繁體中文(台灣)</item>  <!-- zh-tw -->
    </string-array>
    <string-array name="langs">
        <item>ar</item>      <!-- Arabic -->
        <item>en</item>      <!-- English -->
        <item>es</item>      <!-- Spanish -->
        <item>de</item>      <!-- German -->
        <item>fr</item>      <!-- French -->
        <item>in</item>      <!-- Indonesian (for some reason) -->
        <item>it</item>      <!-- Italian -->
        <item>pl</item>      <!-- Polish -->
        <item>pt-BR</item>   <!-- Portuguese (Brazil) -->
        <item>ru</item>      <!-- Russian -->
        <item>tr</item>      <!-- Turkish -->
        <item>uk</item>      <!-- Ukrainian -->
        <item>vi</item>      <!-- Vietnamese -->
        <item>zh-TW</item>   <!-- Chinese (Taiwan, Traditional) -->
    </string-array>
    <string name="label_parent_dir" translatable="false">…</string>
    <string name="create_issue">Create GitHub Issue</string>
    <string name="copy_log">Copy log</string>
    <string name="pause">Pause button</string>
    <string name="copied_log">Copied log</string>
    <string name="select_from_installed_apps">Select from Installed Apps</string>
    <string name="app_icon_list_label">App icon</string>
    <string name="install">Install</string>
    <string name="black_theme">Black theme</string>
    <string name="dark_theme">Dark theme</string>
    <string name="light_theme">Light theme</string>
    <string name="system_theme">System theme</string>
    <string name="suffix">Suffix</string>
    <string name="pairip_warning">The app you are trying to merge uses Pairip/Google加固 Integrity to protect it from modification. The merged version will crash on opening unless you know how to modify the APK to bypass it.</string>
    <string name="force">Force merging mismatched splits (with different versionCode or package name)</string>
    <string name="file_save_method">File save method</string>
    <string name="pick_folder">Enter folder</string>
    <string name="not_split">This does not seem to be a split APK (%1$s)</string>
</resources>
