<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/logToggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/enable_logs" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/ask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/ask" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/showDialogToggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/show_dialog" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/selectSplitsForDeviceToggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/automatically_select" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/signToggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/sign_apk" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/updateToggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/auto_update" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/checkUpdateNow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_update_now"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/langPicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lang"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton" />
    </LinearLayout>
</ScrollView>