<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/changeTextColor"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/change_text_color" />

        <Button
            android:id="@+id/changeBgColor"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/change_background_color" />

    </LinearLayout>

    <TextView
        android:id="@+id/logToggleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/enable_logs" />

    <ToggleButton
        android:id="@+id/logToggle"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>

    <TextView
        android:id="@+id/askText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/ask" />

    <ToggleButton
        android:id="@+id/ask"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>

    <TextView
        android:id="@+id/showDialogToggleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/show_dialog" />

    <ToggleButton
        android:id="@+id/showDialogToggle"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>

    <TextView
        android:id="@+id/selectSplitsForDeviceToggleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/automatically_select" />

    <ToggleButton
        android:id="@+id/selectSplitsForDeviceToggle"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>

    <TextView
        android:id="@+id/signToggleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/sign_apk" />

    <ToggleButton
        android:id="@+id/signToggle"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>

    <TextView
        android:id="@+id/revancedText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/fix" />

    <ToggleButton
        android:id="@+id/revancedToggle"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>

    <Button
        android:id="@+id/langPicker"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/lang" />

    <TextView
        android:id="@+id/updateToggleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/auto_update" />

    <ToggleButton
        android:id="@+id/updateToggle"
        android:layout_height="wrap_content" android:layout_width="match_parent"/>

    <Button
        android:id="@+id/checkUpdateNow"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/check_update_now" />

</LinearLayout>
